dark mode fixes

--- a/src/app.css
+++ b/src/app.css
@@ -76,3 +76,19 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #d9d9d9;
+    background-color: #121212;
+  }
+  a:hover {
+    color: #535bf2;
+  }
+  button {
+    background-color: #1a1a1a;
+  }
+}
